# app-exchange

./: .clang-format  .codespellignore  .gitignore  .gitmodules  404.html  CHANGELOG.md  Makefile  README.md  copy_elfs_for_zemu.sh  docs.md  gdb.config  index.html  ledger_app.toml  mkdocs.yml  protocol.md  pytest.ini
.github/workflows/: check_protobuf.yml  ci-workflow.yml  codeql-workflow.yml  e2e-tests.yml  guidelines_enforcer.yml  lint-workflow.yml  misspellings_checks.yml  publish_doc_website.yml  python-client.yml  reusable_regenerate_snapshots.yml  reusable_swap_functional_tests.yml  (+1 more)
client/: CHANGELOG.md  README.md  pyproject.toml
client/src/ledger_app_clients/exchange/: __init__.py  cal.py  cal_helper.py  client.py  ethereum.py  navigation_helper.py  signing_authority.py  test_runner.py  transaction_builder.py  utils.py
client/src/ledger_app_clients/exchange/pb/: exchange_pb2.py
client/src/ledger_app_clients/exchange/pki/: pem_signer.py  tlv.py  trusted_name.pem
doc/: flow.md  protocol.md
docs/: clone_dependencies.py  how_to_build_the_documentation.md  index.md  requirements.txt
docs/walkthrough/: index.md  (+5 more)
how_to_build_the_documentation/: index.html
include/: swap_lib_calls.h
search/: search_index.json
src/: apdu_offsets.h  apdu_parser.c  apdu_parser.h  base64.c  base64.h  buf.c  buf.h  buffer.c  buffer.h  check_address.c  check_address.h  check_addresses_and_amounts.c  check_addresses_and_amounts.h  check_asset_in.c  check_asset_in.h  check_partner.c  check_partner.h  check_payout_address.c  check_payout_address.h  check_refund_address.c  check_refund_address.h  check_signature.c  check_signature.h  check_tx_signature.c  check_tx_signature.h  checks.h  command_dispatcher.c  command_dispatcher.h  commands.h  currency_application_map.c  currency_application_map.h  currency_lib_calls.c  currency_lib_calls.h  default_screen.c  default_screen.h  der.c  der.h  der_serialization.c  der_serialization.h  direct_calls_api.c  (+71 more)
technical_information/: index.html
technical_informations/: index.html
test/: .babelrc  docs.md  package.json  start_swap.py  tezos.elf
walkthrough/: index.html
(+285 files in other folders)
