[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger_app_clients.exchange"
description = "Ledger Exchange Python client"
version = "0.0.1"
dependencies = [
    "ragger",
    "cryptography"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ledger_app_clients.exchange.pki" = ["trusted_name.pem"]