[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger_app_clients.exchange"
description = "Ledger Exchange Python client"
version = "0.0.3"
authors = [
    { name = "Ledger", email = "hello@ledger.fr" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ragger",
    "cryptography"
]
[project.urls]
Homepage = "https://github.com/LedgerHQ/app-exchange"
Issues = "https://github.com/LedgerHQ/app-exchange/issues"

[tool.setuptools]
include-package-data = true
license-files = []

[tool.setuptools.package-data]
"ledger_app_clients.exchange.pki" = ["trusted_name.pem"]