[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger_app_clients.exchange"
description = "Ledger Exchange Python client"
dynamic = ["version"]
authors = [
    { name = "Ledger", email = "hello@ledger.fr" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ragger",
    "cryptography"
]
[project.urls]
Homepage = "https://github.com/LedgerHQ/app-exchange"
Issues = "https://github.com/LedgerHQ/app-exchange/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
local_scheme = "no-local-version"
root = "../"
git_describe_command = "git describe --dirty --tags --long --match client-*[0-9]*"
fallback_version = "0.0.0"

[tool.setuptools.package-data]
"ledger_app_clients.exchange.pki" = ["trusted_name.pem"]